Revision history for perl module AnyEvent::UserAgent

0.09    2024-11-10
        - Add more class options that can be passed to all requests (#6, Mathias
          Kende).

0.08    2024-11-08
        - Support sending multiple values for a single header (#5, Mathias
          Kende).

0.07    2014-09-02
        - Fix cookie handling (#4, Eric Johnson).

0.06    2014-07-31
        - Rename timeout attribute to inactivity_timeout.
        - Add request_timeout attribute (Alexander Onokhov).
        - Add Client-Warning header on error, like in LWP::UserAgent.

0.05    2014-06-21
        - Fix test failed for perl <= 5.12.

0.04    2014-06-20
        - Add support for redefine some options of the user agent for one
          request only.
        - Add support for arguments of AnyEvent::HTTP::http_request method.
        - Fix changing of the request options during the redirects.
        - Fix processing of the request headers.
        - Add more tests.

0.03    2014-04-12
        - Fix processing of an invalid URLs (#3, Andrey Khozov).

0.02    2013-10-06
        - Implement Basic authorization support.
        - Implement redirects support.
        - Fix processing of the cookies in redirects.
        - Add max_redirects attribute.
        - Add more tests.

0.01    2013-08-16
        - Initial public release.